1st working version
- Various updates to build.gradle
- Added AboutMenu
- Removed pre Java9 code from TooltipHelper
- Extracted private classes in Tests